--- a/.github/workflows/run_e2e_tests.yml
+++ b/.github/workflows/run_e2e_tests.yml
@@ -1,8 +1,8 @@
 name: Run e2e autotests
 on:
-  workflow_dispatch: # Trigger manual run
+  workflow_dispatch:
     inputs:
-      env: # Choose env
+      env:
         type: choice
         required: true
         options:
@@ -27,20 +27,22 @@ env:
 jobs:
   run_tests:
     name: Run e2e tests
-    runs-on: ubuntu-latest # Run Ubuntu
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout code # Copy repository and move to the needed branch
+      - name: Checkout code
         uses: actions/checkout@v2
-      - name: Setup Node.js # Install Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '21' # Node.js version
-      - name: Update playwright and install dependencies # Update playwright and install dependencies
+          node-version: '21'
+      - name: Update playwright and install dependencies
+        shell: bash
         run: |
           npm install -g playwright@latest
           npm install -D @playwright/test@latest
           npx playwright install --with-deps
-      - name: Create .env file # Create .env.playwright.local with secrets
+      - name: Create .env file
+        shell: bash
         run: |
           if [[ "${{ github.event.inputs.env }}" == "test" ]]; then
             echo "TEST_EMAIL=${{ secrets.TEST_EMAIL }}" >> .env.playwright.local
@@ -52,7 +54,8 @@ jobs:
             echo "TEST_EMAIL=${{ secrets.PROD_EMAIL }}" >> .env.playwright.local
             echo "TEST_PASSWORD=${{ secrets.PROD_PASSWORD }}" >> .env.playwright.local
           fi
-      - name: Adjust project URLs # If launch is test or dev, change urls at projects-config.json
+      - name: Adjust project URLs
+        shell: bash
         run: |
           if [[ "${{ github.event.inputs.env }}" == "test" ]]; then
             sed -i "s|\"url\": \"$prod_atlas_url\"|\"url\": \"$test_atlas_url\"|g" e2e/projects-config.json
@@ -65,6 +68,6 @@ jobs:
             sed -i "s|\"url\": \"$prod_smart_city_url\"|\"url\": \"$dev_smart_city_url\"|g" e2e/projects-config.json
             sed -i "s|\"url\": \"$prod_oam_url\"|\"url\": \"$dev_oam_url\"|g" e2e/projects-config.json
           fi
-      - name: Move to e2e directory and run tests # Move to e2e and run tests in headless way
+      - name: Move to e2e directory and run tests
         working-directory: ./e2e
         run: npx playwright test
