--- a/.github/workflows/run_e2e_tests.yml
+++ b/.github/workflows/run_e2e_tests.yml
@@ -9,20 +9,16 @@ on:
           - dev
           - test
           - prod
-
-env:
-  test_atlas_url: 'https://test-apps-ninja01.konturlabs.com/'
-  dev_atlas_url: 'https://test-apps-ninja02.konturlabs.com/'
-  prod_atlas_url: 'https://atlas.kontur.io/'
-  test_disaster_ninja_url: 'https://test-apps-ninja01.konturlabs.com/'
-  dev_disaster_ninja_url: 'https://test-apps-ninja02.konturlabs.com/'
-  prod_disaster_ninja_url: 'https://disaster.ninja/'
-  test_smart_city_url: 'https://test-apps-ninja01.konturlabs.com/'
-  dev_smart_city_url: 'https://test-apps-ninja02.konturlabs.com/'
-  prod_smart_city_url: 'https://maps.kontur.io/'
-  test_oam_url: 'https://test-apps-ninja01.konturlabs.com/'
-  dev_oam_url: 'https://test-apps-ninja02.konturlabs.com/'
-  prod_oam_url: 'https://new.openaerialmap.org/'
+      app:
+        type: choice
+        required: true
+        default: all
+        options:
+          - atlas
+          - disaster-ninja
+          - smart-city
+          - oam
+          - all
 
 jobs:
   run_tests:
@@ -30,7 +26,14 @@ jobs:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     env:
-      INPUT_ENV: ${{ github.event.inputs.env }}
+      ENVIRONMENT: ${{ github.event.inputs.env }}
+      APP_NAME: ${{ github.event.inputs.app }}
+      TEST_EMAIL: ${{ secrets.TEST_EMAIL }}
+      TEST_PASSWORD: ${{ secrets.TEST_PASSWORD }}
+      DEV_EMAIL: ${{ secrets.DEV_EMAIL }}
+      DEV_PASSWORD: ${{ secrets.DEV_PASSWORD }}
+      PROD_EMAIL: ${{ secrets.PROD_EMAIL }}
+      PROD_PASSWORD: ${{ secrets.PROD_PASSWORD }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -38,9 +41,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-      - name: Install dependencies
-        working-directory: .
-        run: npm ci
       - name: Update playwright and install dependencies
         shell: bash
         run: |
@@ -50,30 +50,16 @@ jobs:
       - name: Create .env file
         shell: bash
         run: |
-          if [[ "$INPUT_ENV" == "test" ]]; then
-            echo "TEST_EMAIL=${{ secrets.TEST_EMAIL }}" >> .env.playwright.local
-            echo "TEST_PASSWORD=${{ secrets.TEST_PASSWORD }}" >> .env.playwright.local
-          elif [[ "$INPUT_ENV" == "dev" ]]; then
-            echo "TEST_EMAIL=${{ secrets.DEV_EMAIL }}" >> .env.playwright.local
-            echo "TEST_PASSWORD=${{ secrets.DEV_PASSWORD }}" >> .env.playwright.local
-          elif [[ "$INPUT_ENV" == "prod" ]]; then
-            echo "TEST_EMAIL=${{ secrets.PROD_EMAIL }}" >> .env.playwright.local
-            echo "TEST_PASSWORD=${{ secrets.PROD_PASSWORD }}" >> .env.playwright.local
-          fi
-      - name: Adjust project URLs
-        shell: bash
-        run: |
-          if [[ "$INPUT_ENV" == "test" ]]; then
-            sed -i "s|\"url\": \"$prod_atlas_url\"|\"url\": \"$test_atlas_url\"|g" e2e/projects-config.json
-            sed -i "s|\"url\": \"$prod_disaster_ninja_url\"|\"url\": \"$test_disaster_ninja_url\"|g" e2e/projects-config.json
-            sed -i "s|\"url\": \"$prod_smart_city_url\"|\"url\": \"$test_smart_city_url\"|g" e2e/projects-config.json
-            sed -i "s|\"url\": \"$prod_oam_url\"|\"url\": \"$test_oam_url\"|g" e2e/projects-config.json
-          elif [[ "$INPUT_ENV" == "dev" ]]; then
-            sed -i "s|\"url\": \"$prod_atlas_url\"|\"url\": \"$dev_atlas_url\"|g" e2e/projects-config.json
-            sed -i "s|\"url\": \"$prod_disaster_ninja_url\"|\"url\": \"$dev_disaster_ninja_url\"|g" e2e/projects-config.json
-            sed -i "s|\"url\": \"$prod_smart_city_url\"|\"url\": \"$dev_smart_city_url\"|g" e2e/projects-config.json
-            sed -i "s|\"url\": \"$prod_oam_url\"|\"url\": \"$dev_oam_url\"|g" e2e/projects-config.json
-          fi
+          ENV_PREFIX="${ENVIRONMENT^^}" # Convert to uppercase
+          EMAIL_VAR_NAME="${ENV_PREFIX}_EMAIL"
+          PASSWORD_VAR_NAME="${ENV_PREFIX}_PASSWORD"
+
+          EMAIL="${!EMAIL_VAR_NAME}"
+          PASSWORD="${!PASSWORD_VAR_NAME}"
+
+          echo "EMAIL=$EMAIL" >> .env.playwright.production
+          echo "PASSWORD=$PASSWORD" >> .env.playwright.production
+
       - name: Move to e2e directory and run tests
         working-directory: ./e2e
         run: npx playwright test
