--- a/e2e/projects-config.json
+++ b/e2e/projects-config.json
@@ -1,22 +1,86 @@
-{
-  "atlas": {
-    "url": "https://atlas.kontur.io/",
-    "app": "9043acf9-2cf3-48ac-9656-a5d7c4b7593d",
-    "title": "Kontur Atlas"
+[
+  {
+    "env": "prod",
+    "name": "atlas",
+    "url": "https://atlas.kontur.io",
+    "title": "Kontur Atlas",
+    "hasCookieBanner": true
   },
-  "disaster_ninja": {
-    "url": "https://disaster.ninja/",
-    "app": "58851b50-9574-4aec-a3a6-425fa18dcb54",
-    "title": "Disaster Ninja"
+  {
+    "env": "dev",
+    "name": "atlas",
+    "url": "https://test-apps-ninja02.konturlabs.com/active?app=9043acf9-2cf3-48ac-9656-a5d7c4b7593d",
+    "title": "Kontur Atlas",
+    "hasCookieBanner": true
   },
-  "smart_city": {
-    "url": "https://maps.kontur.io/",
-    "app": "634f23f5-f898-4098-a8bd-09eb7c1e1ae5",
-    "title": "Smart City"
+  {
+    "env": "test",
+    "name": "atlas",
+    "url": "https://test-apps-ninja01.konturlabs.com/active?app=9043acf9-2cf3-48ac-9656-a5d7c4b7593d",
+    "title": "Kontur Atlas",
+    "hasCookieBanner": true
   },
-  "oam": {
-    "url": "https://new.openaerialmap.org/",
-    "app": "1dc6fe68-8802-4672-868d-7f17943bf1c8",
-    "title": "OpenAerialMap"
+  {
+    "env": "prod",
+    "name": "disaster-ninja",
+    "url": "https://disaster.ninja",
+    "title": "Disaster Ninja",
+    "hasCookieBanner": true
+  },
+  {
+    "env": "dev",
+    "name": "disaster-ninja",
+    "url": "https://test-apps-ninja02.konturlabs.com/active?app=58851b50-9574-4aec-a3a6-425fa18dcb54",
+    "title": "Disaster Ninja",
+    "hasCookieBanner": true
+  },
+  {
+    "env": "test",
+    "name": "disaster-ninja",
+    "url": "https://test-apps-ninja01.konturlabs.com/active?app=58851b50-9574-4aec-a3a6-425fa18dcb54",
+    "title": "Disaster Ninja",
+    "hasCookieBanner": true
+  },
+  {
+    "env": "prod",
+    "name": "smart-city",
+    "url": "https://maps.kontur.io",
+    "title": "Smart City",
+    "hasCookieBanner": true
+  },
+  {
+    "env": "dev",
+    "name": "smart-city",
+    "url": "https://test-apps-ninja02.konturlabs.com/active?app=634f23f5-f898-4098-a8bd-09eb7c1e1ae5",
+    "title": "Smart City",
+    "hasCookieBanner": true
+  },
+  {
+    "env": "test",
+    "name": "smart-city",
+    "url": "https://test-apps-ninja01.konturlabs.com/active?app=634f23f5-f898-4098-a8bd-09eb7c1e1ae5",
+    "title": "Smart City",
+    "hasCookieBanner": true
+  },
+  {
+    "env": "prod",
+    "name": "oam",
+    "url": "https://new.openaerialmap.org",
+    "title": "OpenAerialMap",
+    "hasCookieBanner": false
+  },
+  {
+    "env": "dev",
+    "name": "oam",
+    "url": "https://test-apps-ninja02.konturlabs.com/active?app=1dc6fe68-8802-4672-868d-7f17943bf1c8",
+    "title": "OpenAerialMap",
+    "hasCookieBanner": false
+  },
+  {
+    "env": "test",
+    "name": "oam",
+    "url": "https://test-apps-ninja01.konturlabs.com/active?app=1dc6fe68-8802-4672-868d-7f17943bf1c8",
+    "title": "OpenAerialMap",
+    "hasCookieBanner": false
   }
-}
+]
