--- a/.github/workflows/run_e2e_tests.yml
+++ b/.github/workflows/run_e2e_tests.yml
@@ -41,12 +41,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-      - name: Update playwright and install dependencies
-        shell: bash
-        run: |
-          npm install -g playwright@latest
-          npm install -D @playwright/test@latest
-          npx playwright install --with-deps
       - name: Create .env file
         shell: bash
         run: |
@@ -61,5 +55,30 @@ jobs:
           echo "EMAIL=$EMAIL" >> .env.playwright.production
           echo "PASSWORD=$PASSWORD" >> .env.playwright.production
 
-      - name: Run tests
+      - name: Cache node modules
+        id: cache-npm
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+      - name: Update playwright and install dependencies
+        shell: bash
+        run: |
+          npm install -g playwright@latest
+          npm install -D @playwright/test@latest
+          npx playwright install --with-deps
+      - name: Run Playwright tests
         run: npx playwright test
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
