--- a/package.json
+++ b/package.json
@@ -174,6 +174,7 @@
     "react-i18next": "^12.3.1",
     "react-lazily": "^0.9.2",
     "react-markdown": "^8.0.7",
+    "react-promise-suspense": "^0.3.4",
     "react-router": "^5.3.4",
     "react-router-cache-route": "^1.12.11",
     "react-router-dom": "^5.3.4",
