--- a/.github/workflows/run_e2e_tests.yml
+++ b/.github/workflows/run_e2e_tests.yml
@@ -75,7 +75,7 @@ jobs:
           npm install -D @playwright/test@latest
           npx playwright install --with-deps
       - name: Run Playwright tests
-        run: npx playwright test
+        run: npx playwright test --trace on
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
