--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-saver": "^2.0.5",
     "geojson-polygon-self-intersections": "^1.2.1",
+    "gettext-parser": "^8.0.0",
     "happy-dom": "^12.10.3",
     "hash-wasm": "^4.11.0",
     "history": "^4.10.1",
@@ -197,16 +198,17 @@
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-mkcert": "^1.17.4",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.3.1",
     "wretch": "^2.8.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.42.1",
+    "@types/gettext-parser": "^4.0.4",
     "chalk": "^5.3.0",
     "dotenv": "^16.4.5",
     "husky": "^8.0.3",
     "open-cli": "^7.2.0",
     "prompts": "^2.4.2",
-    "semver": "^7.6.0"
+    "semver": "^7.6.0",
+    "vitest": "^1.5.2"
   }
 }
