--- a/package.json
+++ b/package.json
@@ -206,6 +206,7 @@
     "chalk": "^5.3.0",
     "dotenv": "^16.4.5",
     "husky": "^8.0.3",
+    "mdast-util-from-markdown": "^2.0.0",
     "open-cli": "^7.2.0",
     "prompts": "^2.4.2",
     "semver": "^7.6.0",
