--- a/package.json
+++ b/package.json
@@ -198,7 +198,8 @@
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-mkcert": "^1.17.4",
     "vite-tsconfig-paths": "^4.3.2",
-    "wretch": "^2.8.1"
+    "wretch": "^2.8.1",
+    "mdast-util-from-markdown": "^2.0.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.42.1",
@@ -206,7 +207,6 @@
     "chalk": "^5.3.0",
     "dotenv": "^16.4.5",
     "husky": "^8.0.3",
-    "mdast-util-from-markdown": "^2.0.0",
     "open-cli": "^7.2.0",
     "prompts": "^2.4.2",
     "semver": "^7.6.0",
