--- a/package.json
+++ b/package.json
@@ -200,7 +200,8 @@
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-mkcert": "^1.17.4",
     "vite-tsconfig-paths": "^4.3.2",
-    "wretch": "^2.8.1"
+    "wretch": "^2.8.1",
+    "vitest": "^1.5.3"
   },
   "devDependencies": {
     "@playwright/test": "^1.42.1",
@@ -210,7 +211,6 @@
     "husky": "^8.0.3",
     "open-cli": "^7.2.0",
     "prompts": "^2.4.2",
-    "semver": "^7.6.0",
-    "vitest": "^1.5.3"
+    "semver": "^7.6.0"
   }
 }
