--- a/.gitattributes
+++ b/.gitattributes
@@ -1,209 +1,79 @@
-## GITATTRIBUTES FOR WEB PROJECTS
-#
-# These settings are for any web project.
-#
-# Details per file setting:
-#   text    These files should be normalized (i.e. convert CRLF to LF).
-#   binary  These files are binary and should be left untouched.
-#
-# Note that binary is a macro for -text -diff.
-######################################################################
-
-# Auto detect
-##   Handle line endings automatically for files detected as
-##   text and leave all files detected as binary untouched.
-##   This will handle all files NOT defined below.
-*                 text=auto
+# Set default behavior to automatically normalize line endings
+*                 text=auto eol=lf
 
 # Source code
-*.bash            text eol=lf
-*.bat             text eol=crlf
-*.cmd             text eol=crlf
-*.coffee          text
-*.css             text diff=css
-*.htm             text diff=html
-*.html            text diff=html
-*.inc             text
-*.ini             text
+*.cjs             text eol=lf
+*.css             text eol=lf diff=css
+*.html            text eol=lf diff=html
 *.js              text eol=lf
-*.json            text
-*.jsx             text
-*.less            text
-*.ls              text
-*.map             text -diff
-*.od              text
-*.onlydata        text
-*.php             text diff=php
-*.pl              text
-*.ps1             text eol=crlf
-*.py              text diff=python
-*.rb              text diff=ruby
-*.sass            text
-*.scm             text
-*.scss            text diff=css
-*.sh              text eol=lf
-*.sql             text
-*.styl            text
-*.tag             text
+*.jsx             text eol=lf
+*.mjs             text eol=lf
 *.ts              text eol=lf
 *.tsx             text eol=lf
-*.xml             text
-*.xhtml           text diff=html
 
-# Docker
-Dockerfile        text
+# Go files
+*.go              text eol=lf diff=golang
+*.mod             text eol=lf
+*.sum             text eol=lf
 
-# Documentation
-*.ipynb           text
-*.markdown        text diff=markdown
-*.md              text diff=markdown
-*.mdwn            text diff=markdown
-*.mdown           text diff=markdown
-*.mkd             text diff=markdown
-*.mkdn            text diff=markdown
-*.mdtxt           text
-*.mdtext          text
-*.txt             text
-AUTHORS           text
-CHANGELOG         text
-CHANGES           text
-CONTRIBUTING      text
-COPYING           text
-copyright         text
-*COPYRIGHT*       text
-INSTALL           text
-license           text
-LICENSE           text
-NEWS              text
-readme            text
-*README*          text
-TODO              text
+# Documentation and configs
+*.md              text eol=lf diff=markdown
+*.yaml            text eol=lf
+*.yml             text eol=lf
+*.json            text eol=lf
+*.lock            text eol=lf -diff
+.editorconfig     text eol=lf
+.eslintignore     text eol=lf
+.gitattributes    text eol=lf
+.gitignore        text eol=lf
+.npmrc            text eol=lf
+.prettierrc       text eol=lf
+Dockerfile        text eol=lf
+.dockerignore     text eol=lf
+LICENSE           text eol=lf
 
-# Templates
-*.dot             text
-*.ejs             text
-*.erb             text
-*.haml            text
-*.handlebars      text
-*.hbs             text
-*.hbt             text
-*.jade            text
-*.latte           text
-*.mustache        text
-*.njk             text
-*.phtml           text
-*.svelte          text
-*.tmpl            text
-*.tpl             text
-*.twig            text
-*.vue             text
+# Package management
+pnpm-lock.yaml    text eol=lf -diff
+pnpm-workspace.yaml text eol=lf
+.npmrc            text eol=lf
+.pnpmfile.cjs     text eol=lf
+.pnpm-debug.log   text eol=lf
+.pnpm/*           binary
 
-# Configs
-*.cnf             text
-*.conf            text
-*.config          text
-.editorconfig     text
-.env              text
-.gitattributes    text
-.gitconfig        text
-.htaccess         text
-*.lock            text -diff
-package.json      text eol=lf
-package-lock.json text -diff eol=lf
-pnpm-lock.yaml    text eol=lf -diff eol=lf
-.prettierrc       text
-yarn.lock         text -diff
-*.toml            text
-*.yaml            text
-*.yml             text
-browserslist      text
-Makefile          text
-makefile          text
+# Workspace specific
+**/pnpm-lock.yaml text eol=lf -diff
+**/package.json   text eol=lf
+**/.npmrc        text eol=lf
 
-# Heroku
-Procfile          text
+# Node specific
+node_modules/*    binary
+.cache/*          binary
+.pnpm-store/*    binary
 
-# Graphics
-*.ai              binary
-*.bmp             binary
-*.eps             binary
-*.gif             binary
-*.gifv            binary
+# Scripts and hooks
+*.sh              text eol=lf
+.husky/*          text eol=lf
+
+# Data files
+*.csv             text eol=lf
+*.po              text eol=lf
+*.pot             text eol=lf
+*.patch           text eol=lf -diff
+*.xml             text eol=lf
+
+# Environment files
+.development      text eol=lf
+.production       text eol=lf
+.cursorignore     text eol=lf
+
+# Playwright
+*.playwright      text eol=lf
+
+# Binary files (should not be modified)
 *.ico             binary
-*.jng             binary
-*.jp2             binary
-*.jpg             binary
-*.jpeg            binary
-*.jpx             binary
-*.jxr             binary
-*.pdf             binary
 *.png             binary
-*.psb             binary
-*.psd             binary
-# SVG treated as an asset (binary) by default.
-*.svg             text
-# If you want to treat it as binary,
-# use the following line instead.
-# *.svg           binary
-*.svgz            binary
-*.tif             binary
-*.tiff            binary
-*.wbmp            binary
-*.webp            binary
+*.xlsx            binary
+*.snap            binary
 
-# Audio
-*.kar             binary
-*.m4a             binary
-*.mid             binary
-*.midi            binary
-*.mp3             binary
-*.ogg             binary
-*.ra              binary
-
-# Video
-*.3gpp            binary
-*.3gp             binary
-*.as              binary
-*.asf             binary
-*.asx             binary
-*.avi             binary
-*.fla             binary
-*.flv             binary
-*.m4v             binary
-*.mng             binary
-*.mov             binary
-*.mp4             binary
-*.mpeg            binary
-*.mpg             binary
-*.ogv             binary
-*.swc             binary
-*.swf             binary
-*.webm            binary
-
-# Archives
-*.7z              binary
-*.gz              binary
-*.jar             binary
-*.rar             binary
-*.tar             binary
-*.zip             binary
-
-# Fonts
-*.ttf             binary
-*.eot             binary
-*.otf             binary
-*.woff            binary
-*.woff2           binary
-
-# Executables
-*.exe             binary
-*.pyc             binary
-
-# RC files (like .babelrc or .eslintrc)
-*.*rc             text
-
-# Ignore files (like .npmignore or .gitignore)
-*.*ignore         text
-
-# Avajs snapshot
-.snap             binary
+# SVG can be treated as text
+*.svg             text eol=lf
